syntax = "proto3";

option csharp_namespace = "Protos.Actions.FinishNow";

package finishnow;

message FinishNowRequest {
  string ActionId = 1;
  string RaceId = 2;
  string CategoryId = 3;
  string RacerId = 4;
}